--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/46ca727159.js" crossorigin="anonymous"></script>
-    <title>Bopify</title>
+    <title>Bopify - Web Player</title>
   </head>
   <body>
     <div id="root"></div>
