--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1D1S1TWJ85"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1D1S1TWJ85');
+</script>
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/46ca727159.js" crossorigin="anonymous"></script>
     <title>Bopify - Web Player</title>
