--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,16 +2,38 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1D1S1TWJ85"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1D1S1TWJ85"
+    ></script>
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "j2853ofv3h");
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-1D1S1TWJ85');
-</script>
+      gtag("config", "G-1D1S1TWJ85");
+    </script>
     <meta charset="utf-8" />
-    <script src="https://kit.fontawesome.com/46ca727159.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/46ca727159.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Bopify - Web Player</title>
   </head>
   <body>
